--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
-
+importlib-metadata==8.5.0
+importlib-resources==6.4.0
+ipykernel==6.29.5
+jaraco.collections==5.1.0
+pickleshare==0.7.5
+psycopg2-binary==2.9.10
+pymongo==4.10.1
+tomli==2.0.1
 
 -e .
